Update Books & Writers menu with icons, fix mobile navigation, and enhance UI components

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#2c3e50" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>North Mountain - Scripture wisdom</title>
+    <title>Wisdom Mountain - Scripture wisdom</title>
     <!-- Bootstrap CSS for Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
