UI: center Bible controls; add verse selection + copy toolbar; minor menu text updates

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta name="theme-color" content="#2c3e50" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wisdom Mountain - Scripture wisdom</title>
+    <!-- Google Fonts for Telugu support -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS for Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     
