--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Favicon Configuration -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon.png" />
-  <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon.png" />
-  <link rel="manifest" href="./manifest.json" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/The-Wisdom-Mountain/favicon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/The-Wisdom-Mountain/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="/The-Wisdom-Mountain/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/The-Wisdom-Mountain/favicon.png" />
+  <link rel="manifest" href="/The-Wisdom-Mountain/manifest.json" />
     <meta name="theme-color" content="#2c3e50" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wisdom Mountain - Scripture wisdom</title>
@@ -44,6 +44,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
